[package]

name = "pixel_strategy"

version = "0.1.0"

description = "Pixel Strategy reserve management program"

edition = "2021"

[lib]

crate-type = ["cdylib", "lib"]

[features]

no-entrypoint = []

no-idl = []

no-log-ix-name = []

cpi = ["no-entrypoint"]

default = []

[dependencies]

anchor-lang = "0.29.0"

anchor-spl = "0.29.0"